--- a/index.html
+++ b/index.html
@@ -1,15 +1,22 @@
 <!doctype html>
+
 <head>
   <title>Connect 4</title>
   <link href="connect4.css" rel="stylesheet">
 </head>
+
 <body>
+  <form action="#" id="playgame">
+    <input type="text" id="player1" placeholder="Player One - Enter Color">
+    <input type="text" id="player2" placeholder="Player Two - Enter Color">
+    <button id="start">Start Game!</button>
+  </form>
+  <div id="game">
+    <table id="board"></table>
+  </div>
 
-<div id="game">
-  <table id="board"></table>
-</div>
-
-<script src="connect4.js"></script>
+  <script src="connect4.js"></script>
 
 </body>
+
 </html>
